# conda-forge-metadata

./: .gitignore  .pre-commit-config.yaml  LICENSE  MANIFEST.in  README.md  pyproject.toml  pyrightconfig.json  requirements-dev.txt  requirements.txt  setup.py
.github/: dependabot.yml
.github/workflows/: pre-commit.yml  pypi.yml  tests.yml
conda_forge_metadata/: _version.py  deprecations.py  feedstock_outputs.py  libcfgraph.py  oci.py  repodata.py  streaming.py  types.py
conda_forge_metadata/artifact_info/: __init__.py  info_json.py
conda_forge_metadata/autotick_bot/: __init__.py  import_to_pkg.py  pypi_to_conda.py
conda_forge_metadata/conda_forge_bot/: import_to_pkg.py  pypi_to_conda.py
conda_forge_metadata/linter/: __init__.py  hints.py
tests/: test_alive.py  test_feedstock_outputs.py  test_info_json.py  test_libcfgraph.py  test_linter_hints.py  test_map_import_to_package.py  test_map_pypi_to_conda.py  test_repodata.py
